--- a/public/cases.html
+++ b/public/cases.html
@@ -53,7 +53,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
@@ -85,7 +85,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
@@ -117,7 +117,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
@@ -149,7 +149,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
@@ -181,7 +181,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
@@ -213,14 +213,14 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
       </ul>
     </aside>
     <header class="header header--theme-white">
-      <div class="container header__container">
+      <div class="header__container">
         <div class="header__about">
           Cервис для роботизации службы поддержки клиентов или сотрудников в цифровых каналах с помощью искусственного интеллекта</div>
         <nav class="menu">
@@ -237,7 +237,7 @@
     </header>
     <main class="main">
       <article class="cases">
-        <div class="container">
+        <div class="container container--full">
           <div class="cases__full-screen">
             <h1 class="cases__title">Сases</h1>
             <div class="cases__text"><span>Наши клиенты – смелые инноваторы,</span> лидеры рынка в своих нишах</div>
@@ -245,7 +245,7 @@
         </div>
         <div class="cases__grid">
           <div class="clients__col">
-            <div class="clients-card clients-card--simple cases__item">
+            <div class="clients-card clients-card--simple clients__item">
               <div class="clients-card__client">
                 <div class="clients-card__client-name">Фосагро</div>
                 <div class="clients-card__client-logo">
@@ -280,7 +280,7 @@
                 </div>
               </div>
             </div>
-            <div class="clients-card clients-card--simple cases__item">
+            <div class="clients-card clients-card--simple clients__item">
               <div class="clients-card__client">
                 <div class="clients-card__client-name">Фосагро</div>
                 <div class="clients-card__client-logo">
@@ -315,7 +315,7 @@
                 </div>
               </div>
             </div>
-            <div class="clients-card clients-card--simple cases__item">
+            <div class="clients-card clients-card--simple clients__item">
               <div class="clients-card__client">
                 <div class="clients-card__client-name">Мегафон</div>
                 <div class="clients-card__client-logo">
@@ -352,7 +352,7 @@
             </div>
           </div>
           <div class="clients__col">
-            <div class="clients-card clients-card--simple cases__item">
+            <div class="clients-card clients-card--simple clients__item">
               <div class="clients-card__client">
                 <div class="clients-card__client-name">PWC</div>
                 <div class="clients-card__client-logo">
@@ -387,7 +387,7 @@
                 </div>
               </div>
             </div>
-            <div class="clients-card clients-card--simple cases__item">
+            <div class="clients-card clients-card--simple clients__item">
               <div class="clients-card__client">
                 <div class="clients-card__client-name">Сколково</div>
                 <div class="clients-card__client-logo">
@@ -427,7 +427,7 @@
       </article>
     </main>
     <footer class="footer">
-      <div class="container footer__container">
+      <div class="container container--full footer__container">
         <div class="footer__part footer__part--1">
           <div class="footer__logo">
             <svg width="249" height="62">
@@ -493,7 +493,7 @@
           <button class="button footer__btn"><span>Начнем диалог</span></button>
         </div>
       </div>
-      <div class="container footer__container footer__container--mt">
+      <div class="container footer__container container--full footer__container--mt">
         <div class="footer__part footer__part--1">
           <div class="footer__bottom-text">© 2019—2021 Autofaq. <br> All rights reserved</div>
         </div>
