--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
@@ -85,7 +85,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
@@ -117,7 +117,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
@@ -149,7 +149,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
@@ -181,7 +181,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
@@ -213,14 +213,14 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
       </ul>
     </aside>
     <header class="header">
-      <div class="container header__container">
+      <div class="header__container">
         <div class="header__about">
           Cервис для роботизации службы поддержки клиентов или сотрудников в цифровых каналах с помощью искусственного интеллекта</div>
         <nav class="menu">
@@ -364,7 +364,7 @@
         </div>
       </section>
       <section class="features">
-        <div class="container">
+        <div class="container features__container">
           <div class="topic features__topic">Key features</div>
           <div class="features__marquee js-marquee-features">Омниканальность</div>
           <div class="features__slider swiper-container __js_slider-features">
@@ -705,7 +705,7 @@
         </div>
       </section>
       <section class="nlu">
-        <div class="container">
+        <div class="container container--full">
           <div class="topic nlu__topic">State-of-the-art NLU</div>
           <div class="nlu__title nlu__title--mobile">NLU</div>
           <div class="nlu__subtitle">NLU Autofaq – лидирующий алгоритм обработки и понимания естественного языка</div>
@@ -948,7 +948,7 @@
         </div>
       </section>
       <section class="news">
-        <div class="container">
+        <div class="container container--full">
           <div class="news__block">
             <div class="topic topic--dark news__topic">новости</div>
             <div class="news__slider news__slider--mb swiper-container __js_slider-news">
@@ -1108,7 +1108,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer__container">
+      <div class="container container--full footer__container">
         <div class="footer__part footer__part--1">
           <div class="footer__logo">
             <svg width="249" height="62">
@@ -1174,7 +1174,7 @@
           <button class="button footer__btn"><span>Начнем диалог</span></button>
         </div>
       </div>
-      <div class="container footer__container footer__container--mt">
+      <div class="container footer__container container--full footer__container--mt">
         <div class="footer__part footer__part--1">
           <div class="footer__bottom-text">© 2019—2021 Autofaq. <br> All rights reserved</div>
         </div>
