--- a/public/news-page.html
+++ b/public/news-page.html
@@ -53,7 +53,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
@@ -85,7 +85,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
@@ -117,7 +117,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
@@ -149,7 +149,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
@@ -181,7 +181,7 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
@@ -213,14 +213,14 @@
                 </div>
               </div>
             </div>
-            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.png" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
             </div>
           </div>
         </li>
       </ul>
     </aside>
     <header class="header header--theme-white">
-      <div class="container header__container">
+      <div class="header__container">
         <div class="header__about">
           Cервис для роботизации службы поддержки клиентов или сотрудников в цифровых каналах с помощью искусственного интеллекта</div>
         <nav class="menu">
@@ -237,7 +237,7 @@
     </header>
     <main class="main">
       <article class="news-page">
-        <div class="container news-page__container">
+        <div class="container container--full news-page__container">
           <h1 class="news-page__title">Новости</h1>
         </div>
         <div class="news-page__wrapper"><a class="news-card swiper-slide news-page__item" href="#" target="_blank">
@@ -349,7 +349,7 @@
       </article>
     </main>
     <footer class="footer">
-      <div class="container footer__container">
+      <div class="container container--full footer__container">
         <div class="footer__part footer__part--1">
           <div class="footer__logo">
             <svg width="249" height="62">
@@ -415,7 +415,7 @@
           <button class="button footer__btn"><span>Начнем диалог</span></button>
         </div>
       </div>
-      <div class="container footer__container footer__container--mt">
+      <div class="container footer__container container--full footer__container--mt">
         <div class="footer__part footer__part--1">
           <div class="footer__bottom-text">© 2019—2021 Autofaq. <br> All rights reserved</div>
         </div>
