--- a/public/index.html
+++ b/public/index.html
@@ -421,7 +421,7 @@
           </div>
         </div>
         <div class="clients__grid">
-          <div class="clients__col">
+          <div class="clients__flex">
             <div class="clients-card clients__item">
               <div class="clients-card__client">
                 <div class="clients-card__client-name">Фосагро</div>
@@ -468,100 +468,6 @@
                 </div>
               </div>
             </div>
-            <div class="clients-card clients__item">
-              <div class="clients-card__client">
-                <div class="clients-card__client-name">Фосагро</div>
-                <div class="clients-card__client-logo">
-                  <div>
-                    <svg width="190" height="142">
-                      <use xlink:href="./images/sprite.svg#fosagro"></use>
-                    </svg>
-                  </div>
-                  <div class="clients-card__toggle"></div>
-                </div>
-                <div class="clients-card__inner">
-                  <div class="clients-card__top">
-                    <div class="clients-card__title"><span>Клиентская техническая поддержка</span> B2B и B2C сервисов</div>
-                    <div class="clients-card__icon">
-                      <svg width="62" height="102">
-                        <use xlink:href="./images/sprite.svg#rostelekom-2"></use>
-                      </svg>
-                    </div>
-                  </div>
-                  <div class="clients-card__middle">
-                    <div class="clients-card__person">
-                      <div class="clients-card__avatar"><img src="images/clients/1.jpg" srcset="images/clients/1@2x.jpg 2x" alt=""></div>
-                      <div class="clients-card__author">
-                        <p>Михаил Осеевский</p>
-                        <p>CEO</p>
-                      </div>
-                    </div>
-                    <div class="clients-card__comment">
-                      «Внедрение Autofaq в наши процессы позволио освободить от рутины более половины состава техподдержки, а также существенно улучшить NPS. Как известно, это единственный
-                       показатель, за которым надо следить, чтобы бизнес рос уверенно и быстро»
-                    </div>
-                  </div>
-                  <div class="clients-card__bottom">
-                    <div class="clients-card__bottom-item">
-                      <p>₽20М</p>
-                      <p>Годовая экономия на ФОТ</p>
-                    </div>
-                    <div class="clients-card__bottom-item">
-                      <p>NPS до 30</p>
-                      <p>Рост NPS с -4 <br> до 30 за 6 <br> месяйв</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="clients-card clients__item">
-              <div class="clients-card__client">
-                <div class="clients-card__client-name">Мегафон</div>
-                <div class="clients-card__client-logo">
-                  <div>
-                    <svg width="383" height="69">
-                      <use xlink:href="./images/sprite.svg#megafon-2"></use>
-                    </svg>
-                  </div>
-                  <div class="clients-card__toggle"></div>
-                </div>
-                <div class="clients-card__inner">
-                  <div class="clients-card__top">
-                    <div class="clients-card__title"><span>Клиентская техническая поддержка</span> B2B и B2C сервисов</div>
-                    <div class="clients-card__icon">
-                      <svg width="62" height="102">
-                        <use xlink:href="./images/sprite.svg#rostelekom-2"></use>
-                      </svg>
-                    </div>
-                  </div>
-                  <div class="clients-card__middle">
-                    <div class="clients-card__person">
-                      <div class="clients-card__avatar"><img src="images/clients/1.jpg" srcset="images/clients/1@2x.jpg 2x" alt=""></div>
-                      <div class="clients-card__author">
-                        <p>Михаил Осеевский</p>
-                        <p>CEO</p>
-                      </div>
-                    </div>
-                    <div class="clients-card__comment">
-                      «Внедрение Autofaq в наши процессы позволио освободить от рутины более половины состава техподдержки, а также существенно улучшить NPS. Как известно, это единственный
-                       показатель, за которым надо следить, чтобы бизнес рос уверенно и быстро»
-                    </div>
-                  </div>
-                  <div class="clients-card__bottom">
-                    <div class="clients-card__bottom-item">
-                      <p>₽20М</p>
-                      <p>Годовая экономия на ФОТ</p>
-                    </div>
-                    <div class="clients-card__bottom-item">
-                      <p>NPS до 30</p>
-                      <p>Рост NPS с -4 <br> до 30 за 6 <br> месяйв</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="clients__col">
             <div class="clients-card clients__item">
               <div class="clients-card__client">
                 <div class="clients-card__client-name">PWC</div>
@@ -610,11 +516,103 @@
             </div>
             <div class="clients-card clients__item">
               <div class="clients-card__client">
+                <div class="clients-card__client-name">Фосагро</div>
+                <div class="clients-card__client-logo">
+                  <div>
+                    <svg width="190" height="142">
+                      <use xlink:href="./images/sprite.svg#fosagro"></use>
+                    </svg>
+                  </div>
+                  <div class="clients-card__toggle"></div>
+                </div>
+                <div class="clients-card__inner">
+                  <div class="clients-card__top">
+                    <div class="clients-card__title"><span>Клиентская техническая поддержка</span> B2B и B2C сервисов</div>
+                    <div class="clients-card__icon">
+                      <svg width="62" height="102">
+                        <use xlink:href="./images/sprite.svg#rostelekom-2"></use>
+                      </svg>
+                    </div>
+                  </div>
+                  <div class="clients-card__middle">
+                    <div class="clients-card__person">
+                      <div class="clients-card__avatar"><img src="images/clients/1.jpg" srcset="images/clients/1@2x.jpg 2x" alt=""></div>
+                      <div class="clients-card__author">
+                        <p>Михаил Осеевский</p>
+                        <p>CEO</p>
+                      </div>
+                    </div>
+                    <div class="clients-card__comment">
+                      «Внедрение Autofaq в наши процессы позволио освободить от рутины более половины состава техподдержки, а также существенно улучшить NPS. Как известно, это единственный
+                       показатель, за которым надо следить, чтобы бизнес рос уверенно и быстро»
+                    </div>
+                  </div>
+                  <div class="clients-card__bottom">
+                    <div class="clients-card__bottom-item">
+                      <p>₽20М</p>
+                      <p>Годовая экономия на ФОТ</p>
+                    </div>
+                    <div class="clients-card__bottom-item">
+                      <p>NPS до 30</p>
+                      <p>Рост NPS с -4 <br> до 30 за 6 <br> месяйв</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="clients-card clients__item">
+              <div class="clients-card__client">
                 <div class="clients-card__client-name">Сколково</div>
                 <div class="clients-card__client-logo">
                   <div>
                     <svg width="152" height="128">
                       <use xlink:href="./images/sprite.svg#sk"></use>
+                    </svg>
+                  </div>
+                  <div class="clients-card__toggle"></div>
+                </div>
+                <div class="clients-card__inner">
+                  <div class="clients-card__top">
+                    <div class="clients-card__title"><span>Клиентская техническая поддержка</span> B2B и B2C сервисов</div>
+                    <div class="clients-card__icon">
+                      <svg width="62" height="102">
+                        <use xlink:href="./images/sprite.svg#rostelekom-2"></use>
+                      </svg>
+                    </div>
+                  </div>
+                  <div class="clients-card__middle">
+                    <div class="clients-card__person">
+                      <div class="clients-card__avatar"><img src="images/clients/1.jpg" srcset="images/clients/1@2x.jpg 2x" alt=""></div>
+                      <div class="clients-card__author">
+                        <p>Михаил Осеевский</p>
+                        <p>CEO</p>
+                      </div>
+                    </div>
+                    <div class="clients-card__comment">
+                      «Внедрение Autofaq в наши процессы позволио освободить от рутины более половины состава техподдержки, а также существенно улучшить NPS. Как известно, это единственный
+                       показатель, за которым надо следить, чтобы бизнес рос уверенно и быстро»
+                    </div>
+                  </div>
+                  <div class="clients-card__bottom">
+                    <div class="clients-card__bottom-item">
+                      <p>₽20М</p>
+                      <p>Годовая экономия на ФОТ</p>
+                    </div>
+                    <div class="clients-card__bottom-item">
+                      <p>NPS до 30</p>
+                      <p>Рост NPS с -4 <br> до 30 за 6 <br> месяйв</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="clients-card clients__item">
+              <div class="clients-card__client">
+                <div class="clients-card__client-name">Мегафон</div>
+                <div class="clients-card__client-logo">
+                  <div>
+                    <svg width="383" height="69">
+                      <use xlink:href="./images/sprite.svg#megafon-2"></use>
                     </svg>
                   </div>
                   <div class="clients-card__toggle"></div>
