--- a/public/cases-single.html
+++ b/public/cases-single.html
@@ -324,7 +324,7 @@
               </div>
               <div class="cases-card__text">Мы внедрили автоматизированную систему на базе машинного обучения, которая успешно решила все поставленные задачи.</div>
             </div>
-            <div class="cases-single__indicators" style="background-image: url(&quot;/images/bg-case.jpg&quot;)">
+            <div class="cases-single__indicators" style="background-image: url(&quot;images/bg-case.jpg&quot;)">
               <div class="cases-single__indicators-title">Показатели</div>
               <div class="cases-single__indicators-wrapper">
                 <div class="cases-single__indicators-grid">
