--- a/public/news-single-2.html
+++ b/public/news-single-2.html
@@ -220,7 +220,7 @@
       </ul>
     </aside>
     <header class="header">
-      <div class="header__container">
+      <div class="header__container container">
         <div class="header__about">
           Cервис для роботизации службы поддержки клиентов или сотрудников в цифровых каналах с помощью искусственного интеллекта</div>
         <nav class="menu">
