--- a/public/index.html
+++ b/public/index.html
@@ -237,10 +237,9 @@
     </header>
     <main class="main">
       <section class="first-screen">
-        <div class="first-screen__3d">
+        <div class="first-screen__3d" id="container3d">
           <div id="model3d"></div>
         </div>
-        <div class="first-screen__bg"><img src="images/ball.png" srcset="images/ball@2x.png 2x" alt=""></div>
         <div class="container">
           <div class="first-screen__title"><span>Autofaq</span><span>Autofaq</span></div>
         </div>
