--- a/public/index.html
+++ b/public/index.html
@@ -240,6 +240,7 @@
         <div class="first-screen__3d" id="container3d">
           <div id="model3d"></div>
         </div>
+        <div class="first-screen__bg"><img src="images/ball.png" srcset="images/ball@2x.png 2x" alt=""></div>
         <div class="container">
           <div class="first-screen__title"><span>Autofaq</span><span>Autofaq</span></div>
         </div>
