--- a/public/index.html
+++ b/public/index.html
@@ -238,6 +238,22 @@
     <main class="main">
       <section class="first-screen">
         <div class="first-screen__3d" id="container3d">
+          <div class="first-screen__3d-preloader">
+            <div class="lds-spinner">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+          </div>
           <div id="model3d"></div>
         </div>
         <div class="container">
