--- a/public/index.html
+++ b/public/index.html
@@ -679,6 +679,9 @@
           <div class="languages__row">
             <p>Общий язык  с каждым</p>
             <div class="languages__text languages__text--mobile">AI алгоритм Autofaq позволяет общаться с клиентами и сотрудниками на 90 языках, понимая смысл</div>
+            <div class="languages__3d" id="container3d2">
+              <div id="model3d2"></div>
+            </div>
             <div class="languages__model"><img src="images/earth.png" srcset="images/earth@2x.png 2x" alt=""></div>
             <div class="languages__list">
               <ul class="swiper-container __js_slider-language">
